Fix chat bubble overflow

--- a/src/components/ChatBubble.module.scss
+++ b/src/components/ChatBubble.module.scss
@@ -13,23 +13,27 @@
 .sentBubble {
   background-color: config.$heading;
   color: #ffffff;
-  text-align: center;
-  max-width: 75%;
-  padding: 5px 10px 5px 10px;
+  text-align: left;
+  max-width: 250px;
+  padding: 6px 12px 6px 12px;
   border-radius: 25px;
   margin-right: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 
 .receivedBubble {
   background-color: config.$contrast;
   color: #ffffff;
-  text-align: center;
-  max-width: 75%;
-  padding: 5px 10px 5px 10px;
+  text-align: left;
+  max-width: 250px;
+  padding: 6px 12px 6px 12px;
   border-radius: 25px;
   margin-left: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
+  word-wrap: break-word;
+  overflow: hidden;
 }
