--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -12,7 +12,8 @@
 .chatContainer {
   display: flex;
   flex-direction: column;
-  height: 75%;
+  min-height: 75%;
+  max-height: 75%;
 }
 
 .chatLog {
@@ -20,9 +21,13 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  overflow: auto;
+  scrollbar-width: none; // Hides scrollbar on Firefox.
+
+  &::-webkit-scrollbar {
+    // Hides scrollbar on Chrome, Safari, and Opera.
+    display: none;
+  }
 }
 
 .chatBox {
